修改index证书下载地址

--- a/web/index.html
+++ b/web/index.html
@@ -40,7 +40,7 @@
 <div class="wrapper">
 	<header class="header">
     	<h2>ipapk-server</h2><br>
-        <a class="attention" href="/cer/myCA.cer">如果出现【无法验证服务器身份】或【无法链接到】，请点击链接安装证书</a>
+        <a class="attention" href="/appstore/cer/myCA.cer">如果出现【无法验证服务器身份】或【无法链接到】，请点击此处链接安装证书</a>
         <p>iOS 10.3后 默认不信任安装的证书，需要手动信任。</p>
         <span>设置 > 通用 > 关于 > 证书信任设置 > 对需要的证书启用完全信任</span>
     </header>
@@ -64,7 +64,7 @@
             </div>
         </div>
     </div>
-        <p class="support">网站由<a href="https://github.com/zhao0/ipapk-server">ipapk-server</a>项目支持</p>
+        <p class="support">网站由ofo移动基础架构组项目支持</p>
 </div>
 </body>
 </html>
