--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,7 @@
 <div class="wrapper">
 	<header class="header">
     	<h2>ipapk-server</h2><br>
+        <p>手机浏览器直接点击下载按钮可安装应用；电脑浏览器用户点击ipa按钮可直接下载指定安装包至电脑</p>
         <p><span style="color:red;">初次使用</span>或者出现<span style="color:red;">【无法验证服务器身份】</span>或<span style="color:red;">【无法链接到】</span>时请进行下面两步操作：</p>
         <!--<a class="attention" href="/appstore/cer/myCA.cer">如果出现【无法验证服务器身份】或【无法链接到】，请点击此处链接安装证书</a>-->
         <p class="attention" >1.安装证书:<a href="/appstore/cer/myCA.cer">请点击此处链接安装证书</a></p>
