添加备用地址链接

--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,8 @@
 <body>
 <div class="wrapper">
 	<header class="header">
-    	<h2>ipapk-server</h2><br>
+        <h2>ipapk-server</h2><p><a href="https://myapps.ofo.com:9999">备用地址</a><span>使用备用地址请设置DNS地址改为10.1.20.94,并删除其它的DNS</span></p><br>
+
         <!--<p>手机浏览器直接点击下载按钮可安装应用；电脑浏览器用户点击ipa按钮可直接下载指定安装包至电脑</p>-->
         <p><span style="color:red;">初次使用</span>或者出现<span style="color:red;">【无法验证服务器身份】</span>或<span style="color:red;">【无法链接到】</span>时请进行下面两步操作：</p>
         <!--<a class="attention" href="/appstore/cer/myCA.cer">如果出现【无法验证服务器身份】或【无法链接到】，请点击此处链接安装证书</a>-->
